# mcp-markitdown

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.minimal.yml  docker-compose.yml  main.py  pyproject.toml  youtube_transcript.py
docker/embedded/: Dockerfile  docker-compose.yml
docker/minimal/: Dockerfile  docker-compose.yml
