[project]
name = "mcp-markitdown"
version = "0.1.0"
description = "Uses the markitdown python package from microsoft to convert various inputs to markdown."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "fastmcp>=2.12.3",
    "requests>=2.32.5",
    "markitdown[all]>=0.1.3",
    "yt-dlp[curl-cffi]>=2023.11.16",
    "ollama>=0.1.5",
    "pillow>=10.0.0",
    "humanize>=4.8.0",
    "youtube-transcript-api>=0.6.1",
    "bgutil-ytdlp-pot-provider>=1.2.0",
]
